--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
 <div class="main-content">
     {{>header}}
+    <p>This site was created by Calvin. It uses data from mapbox.com and darksky.com</p>
     <img src="./img/img1.png" class="portrait">
     <p>Created by {{name}}</p>
 </div>
